--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
+    <link rel="stylesheet" href="styles/style.css" />
+
     <link
       rel="icon"
       type="image/png"
@@ -13,17 +15,6 @@
     />
 
     <title>Frontend Mentor | Interactive comments section</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <!-- Pull dynamic content from the data.json file -->
@@ -34,5 +25,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Pdave-dcn</a>.
     </div>
+    <script src="scripts/main.js" type="module"></script>
   </body>
 </html>
