Displayed the datas on the page

--- a/index.html
+++ b/index.html
@@ -22,14 +22,19 @@
     <title>Frontend Mentor | Interactive comments section</title>
   </head>
   <body>
-    <!-- Pull dynamic content from the data.json file -->
+    <main>
+      <section class="comment-section">
+        <div class="comments-container js-comments-container"></div>
+        <div class="current-user js-current-user"></div>
+      </section>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Pdave-dcn</a>.
-    </div>
-    <script src="scripts/main.js" type="module"></script>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Pdave-dcn</a>.
+      </div>
+      <script src="scripts/main.js" type="module"></script>
+    </main>
   </body>
 </html>
