Made the design

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <section class="comment-section">
         <div class="comments-container js-comments-container"></div>
-        <div class="current-user js-current-user"></div>
+        <div class="currentUser-container js-currentUser-container"></div>
       </section>
 
       <div class="attribution">
