--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
   <body>
     <main>
       <section class="comment-section">
+        <div class="popup-container">
+          <h1>Delete comment</h1>
+          <p>
+            Are you sure you want to delete this comment? This will remove the
+            comment and can't be undone.
+          </p>
+          <div class="no-yes-btns">
+            <button class="no-btn">NO, CANCEL</button>
+            <button class="yes-btn">YES, DELETE</button>
+          </div>
+        </div>
         <div class="comments-container js-comments-container"></div>
         <div class="currentUser-container js-currentUser-container"></div>
       </section>
@@ -36,5 +47,6 @@
       </div>
       <script src="scripts/main.js" type="module"></script>
     </main>
+    <div class="overlay"></div>
   </body>
 </html>
