Made the reply buttons interactive

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             comment and can't be undone.
           </p>
           <div class="no-yes-btns">
-            <button class="no-btn">NO, CANCEL</button>
-            <button class="yes-btn">YES, DELETE</button>
+            <button type="button" class="no-btn">NO, CANCEL</button>
+            <button type="button" class="yes-btn">YES, DELETE</button>
           </div>
         </div>
         <div class="comments-container js-comments-container"></div>
